# local-ai-live-tools

./: .gitignore  LICENSE  README.md  config.sample.yaml  config_manager.py  fix_unicode.py  main.py  persona_manager.py  personas.sample.yaml  prompt.md  pyproject.toml  voice.py  voice_readme.md
